--- a/dictionaries/src/main/webapp/WEB-INF/web.xml
+++ b/dictionaries/src/main/webapp/WEB-INF/web.xml
@@ -4,20 +4,20 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          id="WebApp_ID" version="3.0">
 
-    <display-name>app</display-name>
+    <!--<display-name>app</display-name>-->
 
-    <welcome-file-list>
-        <welcome-file>index.xhtml</welcome-file>
-    </welcome-file-list>
+    <!--<welcome-file-list>-->
+        <!--<welcome-file>index.xhtml</welcome-file>-->
+    <!--</welcome-file-list>-->
 
-    <listener>
-        <listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>
-    </listener>
+    <!--<listener>-->
+        <!--<listener-class>org.jboss.weld.environment.servlet.Listener</listener-class>-->
+    <!--</listener>-->
 
-    <error-page>
-        <error-code>404</error-code>
-        <location>/</location>
-    </error-page>
+    <!--<error-page>-->
+        <!--<error-code>404</error-code>-->
+        <!--<location>/</location>-->
+    <!--</error-page>-->
 
     <servlet>
         <servlet-name>Rest</servlet-name>
