--- a/users/pom.xml
+++ b/users/pom.xml
@@ -12,18 +12,9 @@
 
     <artifactId>accounts</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
-        <dependency>
-            <artifactId>shared</artifactId>
-            <groupId>${parent.groupId}</groupId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <artifactId>database</artifactId>
-            <groupId>${parent.groupId}</groupId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
     </dependencies>
 
     
