--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,11 @@
     <packaging>pom</packaging>
 
     <modules>
-        <module>dictionaries</module>
+        <!--<module>dictionaries</module>-->
         <module>users</module>
-        <module>shared</module>
-        <module>database</module>
+        <!--<module>shared</module>-->
+        <!--<module>database</module>-->
+        <module>api</module>
     </modules>
 
     <properties>
@@ -102,14 +103,6 @@
             <groupId>com.sun.faces</groupId>
             <artifactId>jsf-api</artifactId>
             <version>2.2.14</version>
-        </dependency>
-
-        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
-            <scope>provided</scope>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-impl -->
