--- a/users/pom.xml
+++ b/users/pom.xml
@@ -15,6 +15,11 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+            <artifactId>shared</artifactId>
+            <groupId>${project.parent.groupId}</groupId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
     
