--- a/api/pom.xml
+++ b/api/pom.xml
@@ -16,10 +16,11 @@
 
     <dependencies>
         <dependency>
-            <groupId>${project.parent.groupId}</groupId>
+            <groupId>pl.wipek</groupId>
             <artifactId>users</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
 </project>
