--- a/users/pom.xml
+++ b/users/pom.xml
@@ -16,11 +16,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>pl.wipek</groupId>
             <artifactId>shared</artifactId>
-            <groupId>${project.parent.groupId}</groupId>
-            <version>${project.parent.version}</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
-    
 </project>
