--- a/api/webapp/WEB-INF/web.xml
+++ b/api/webapp/WEB-INF/web.xml
@@ -22,4 +22,15 @@
         <!--<servlet-name>Rest</servlet-name>-->
         <!--<url-pattern>/api/*</url-pattern>-->
     <!--</servlet-mapping>-->
+
+    <!--<context-param>-->
+        <!--<param-name>isLog4jAutoInitializationDisabled</param-name>-->
+        <!--<param-value>true</param-value>-->
+    <!--</context-param>-->
+
+    <!--<context-param>-->
+        <!--<param-name>log4jConfiguration</param-name>-->
+        <!--<param-value>/WEB-INF/config/log4j2.xml</param-value>-->
+    <!--</context-param>-->
+
 </web-app>
