--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
             <version>2.7.0</version>
         </dependency>
 
+
         <!-- https://mvnrepository.com/artifact/org.eclipse.persistence/eclipselink -->
         <!--<dependency>-->
             <!--<groupId>org.eclipse.persistence</groupId>-->
@@ -81,6 +82,13 @@
             <version>5.2.10.Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -88,6 +96,11 @@
             <version>1.7.25</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.25</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/oracle/ojdbc6 -->
         <dependency>
@@ -95,13 +108,6 @@
             <artifactId>ojdbc6</artifactId>
             <version>11.2.0.4.0</version>
         </dependency>
-
-        <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.1-api &ndash;&gt;-->
-        <!--<dependency>-->
-        <!--<groupId>org.hibernate.javax.persistence</groupId>-->
-        <!--<artifactId>hibernate-jpa-2.1-api</artifactId>-->
-        <!--<version>1.0.0.Final</version>-->
-        <!--</dependency>-->
 
          <!--https://mvnrepository.com/artifact/com.sun.jersey/jersey-bundle-->
         <dependency>
