Added request data collector module

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>users</module>
         <module>api</module>
         <module>shared</module>
+        <module>requestdatacollector</module>
     </modules>
 
     <properties>
